chore: adding datadog and update test unit